Many fixes